<resources>
    <string name="app_name">MMS Mentor Manager</string>
    <string name="splash_screen_logo_desc">Brand Logo</string>
    <string name="splash_screen_app_name">Mentor Management System</string>
    <string name="become_a_mentor_manager">Become a mentor manager</string>
    <string name="fill_in_the_form_below">Fill in the form below</string>
    <string name="page_1_of_4">Page 1 of 4</string>
    <string name="select_file">Select file</string>
    <string name="next">Next</string>
    <string name="page_2_of_4">Page 2 of 4</string>
    <string name="previous">Previous</string>
    <string name="program_of_interest">Program of Interest *</string>
    <string name="years_of_technical_expereience">Years of technical expereience *</string>
    <string name="been_a_mentor_manager_before">Been a mentor manager before? *</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="google">Sign in with Google</string>
    <string name="new_user">New user?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="onboard_btn_previous">Previous</string>
    <string name="onboard_btn_next">Next</string>
    <string name="onboard_btn_finish">Finish</string>
    <string name="page_3_of_4">Page 3 of 4</string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="django">Django</string>
    <string name="javascript">JavaScript</string>
    <string name="my_sql">My SQL</string>
    <string name="android">Android</string>
    <string name="swift">Swift</string>
    <string name="c_plus_plus">C++</string>
    <string name="learner">Learner</string>
    <string name="mentor">Mentor</string>
    <string name="program_assistant">Program Assistant</string>
    <string name="program_assistant_lead">Program Assistant Lead</string>
    <string name="page_4_of_4">Page 4 of 4</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="email_address">Email address</string>
    <string name="choose">Choose</string>
    <string name="fill_form_signup">Fill in the form below</string>
    <string name="join_team_signup">join the team</string>
    <string name="name_signup">Name</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_dialog_message">A verification mail has been sent to your registered email, please click the link to confirm your account.</string>
    <string name="done_button">Done</string>
    <string name="mentor_radio_button">Mentor</string>
    <string name="mentor_manager_radio_button">Mentor Manager</string>
    <string name="register_button">Register</string>
    <string name="elizabeth_ayodele">Elizabeth Ayodele</string>
    <string name="bio">Bio</string>
    <string name="previous_roles_held_double_colon">Previous Roles Held:</string>
    <string name="program_of_interest_double_colon">Program of interest:</string>
    <string name="been_a_mentor_before">Been a Mentor Before?</string>
    <string name="years_of_technical_experience">Years of Technical Experience:</string>
    <string name="www_andela_com">www.andela.com</string>
    <string name="add_program">Add Program</string>
    <string name="button_message">Message</string>
    <string name="profile_toolbar">Profile</string>
    <string name="messages">Messages</string>
    <string name="all">All</string>
    <string name="assigned">Assigned</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
    <string name="title_activity_mentor_list">mentor_list</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string-array name="report_array">
        <item>All Reports</item>
        <item>Program Reports</item>
        <item>Task Reports</item>
    </string-array>
    <string name="programs">Programs</string>
    <string name="instagram">Instagram</string>
    <string name="peculiar_umeh">\@peculiar.umeh</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="social">Social</string>
    <string name="github">Github</string>
    <string name="linkedin">Linkedin</string>
    <string name="twitter">Twitter</string>
    <string name="documents">Documents</string>
    <string name="mentor_manager">Mentor Manager</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="technical_proficiency">Technical Proficiency</string>
    <string name="previous_roles_held">Previous Roles Held</string>
    <string name="previous_programs">Previous Programs</string>
    <string name="input_previous_held_programs">Input previous held programs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_a_profile_picture">Set a profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="full_name">Full Name</string>
    <string name="managers">Managers</string>
    <string name="tasks">Tasks</string>
    <string name="reports">reports</string>
    <string name="mentor_gad">MENTOR-GAD</string>
    <string name="mentors">Mentors</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="some_id">6.25</string>
    <string name="body_1">All mentors</string>
    <string name="peculiar_c_">Peculiar C. Umeh</string>
    <string name="program_ass">Program Assistant, Andela, She/her</string>
    <string name="mentro_title">PROGRAM ASST.</string>
    <string name="g">5G</string>
    <string name="mentor_profile_name">Anthony Solomon</string>
    <string name="body_2">Anthony Solomon</string>
    <string name="certificate">Certificates</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim  ut cursus purus efficitur et. Duis ac enim tellus. Phasellus pharetra metus, ut cursus purus efficitur et. Duis ac enim tellus. Phasellus eget tortor dapibus, laoreet mauris sed, dignissim lectus. "</string>
    <string name="technical_p">Technical Proficiency</string>
    <string name="java_script">Java Script, Django, Mysql, Android </string>
    <string name="gads_2022_g">GADS 2022, Google I/O Extended 2021</string>
    <string name="previous_pr">Previous Programs</string>
    <string name="previous_ro">Previous Roles Held:</string>
    <string name="learner_men">Learner, Mentor, Program Assistant,  Program Assistant Lead</string>
    <string name="program_of_">Program of interest:</string>
    <string name="google_afri">Google Africa Scholarship Program</string>
    <string name="been_a_ment">Been a Mentor Before?</string>
    <string name="yes">Yes</string>
    <string name="years_of_te">Years of Technical Experience:</string>
    <string name="years">3 years</string>
    <string name="my_resume_d">My resume.doc</string>
    <string name="birth_cert_">Birth Cert.doc</string>
    <string name="e_ayodele_a">e.ayodele@andela.com</string>
    <string name="peculiar_um">\@peculiar.umeh</string>
    <string name="primary">Delete Mentor</string>
    <string name="body_1_programs">All Programs</string>
    <string name="gads_progra">GADS Program 2022</string>
    <string name="dec_12_2022">Dec 12, 2022</string>
    <string name="task_body_1">All Tasks</string>
    <string name="days_from_n">3 days from now</string>
    <string name="room_librar">Room library article writ...</string>
    <string name="assign_task">Assign Task</string>
    <string name="maximum">Maximum</string>
    <string name="sort">Sort</string>
    <string name="google_afri_report">Google Africa Scholarship Report</string>
    <string name="by_ibrahim_">By Ibrahim Kabir  -  19th - 25th Oct 22</string>
    <string name="gads_cloud_">GADS CLOUD 2022 - COMPLETION</string>
    <string name="google_afri_detailed_report">Google Africa Scholarship\nProgram Report</string>
    <string name="major_achie">Major Achievements</string>
    <string name="major_achivement_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. "</string>
    <string name="major_blocker">Major Blocker</string>
    <string name="in_iaculis_">"In iaculis arcu eros, eget tempus orci facilisis id.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. "</string>
    <string name="major_recom">Major Recommendations</string>
    <string name="nullam_quis">Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="certificate_generate_date">oct_16_2022</string>
    <string name="download_as">Download as</string>
    <string name="dowload_as_file">pdf</string>
    <string name="generate">Generate</string>
    <string name="select_program">Select Program</string>
    <string name="report_down">Report Downloaded Successfully!</string>
    <string name="done">Done</string>
    <string name="share_report_vie_mail">Share Report Via Email</string>
    <string name="share_Report">Open Email App</string>
    <string name="cancel">Cancel</string>
    <string name="certificate_Sent_for_approval">Certificate Sent For Approval</string>
    <string name="certificate_downloaded">Certificate Downloaded Successfully</string>
    <string name="title_activity_messages">messages</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="text_choose_report_type">Choose Report Type</string>
    <string name="text_task">Task</string>
    <string name="text_program">Program</string>
    <string name="text_select_task">Select Task</string>
    <string name="title_compose_report">Compose Report</string>
    <string name="title_hint">Report Title</string>
    <string name="achievement_hint">Major Achievements</string>
    <string name="blocker_hint">Major Blocker</string>
    <string name="recommendation_hint">Major Recommendation</string>
    <string name="radio_unselected">radio not selected</string>
    <string name="radio_selected">radio selected</string>
    <string name="button_cancel">cancel</string>
    <string name="submit_text">Submit Report</string>
    <string name="btm_home">Home</string>
    <string name="btm_search">Search</string>
    <string name="btm_program">Program</string>
    <string name="btm_messages">Messages</string>
    <string name="btm_profile">Profile</string>
</resources>