<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chat_messages_Fragment"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/Search"
        android:icon="@drawable/search_1"
        android:title="Search" />
    <item
        android:id="@+id/programs"
        android:icon="@drawable/programs"
        android:title="Programs " />
    <item
        android:id="@+id/Messages"
        android:icon="@drawable/messages"
        android:title="Messages " />
    <item
        android:id="@+id/mentor_profile"
        android:icon="@drawable/account_user_person"
        android:title="Profile " />

    <item android:title="@string/btm_home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_house_1"/>

    <item android:title="@string/btm_search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"/>


    <item android:title="@string/btm_program"
        android:id="@+id/programsFragment2"
        android:icon="@drawable/programs"/>

    <item android:title="@string/btm_messages"
        android:id="@+id/messagesFragment"
        android:icon="@drawable/messages" />

    <item android:title="@string/btm_profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_img"/>

</menu>