<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.mentor_reports.ComposeReportFragment"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/composeReportBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/arrow_left_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/composeReportTitle"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="31dp"
            android:text="@string/title_compose_report"
            app:layout_constraintStart_toEndOf="@+id/composeReportBack"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_choose_report_type"
            android:textColor="@color/mms_black_2"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:fontFamily="@font/mukta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/composeReportTitle"
            tools:targetApi="p" />

        <ImageView
            android:id="@+id/radioProgram"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/radio_unselected"
            android:focusable="true"
            android:src="@drawable/ic_radio_uncheck"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textProgram"
            style="@style/radio_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_program"
            app:layout_constraintBottom_toBottomOf="@+id/radioProgram"
            app:layout_constraintStart_toEndOf="@+id/radioProgram"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/radioTask"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/radio_selected"
            android:focusable="true"
            android:src="@drawable/ic_radio_check"
            app:layout_constraintBottom_toBottomOf="@+id/textProgram"
            app:layout_constraintStart_toEndOf="@+id/textProgram"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textTask"
            style="@style/radio_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_task"
            app:layout_constraintBottom_toBottomOf="@+id/radioTask"
            app:layout_constraintStart_toEndOf="@+id/radioTask"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/reportTypeButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/button_border"
            android:text="@string/text_select_task"
            android:gravity="center"
            android:textColor="@color/mms_pry_2"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:fontFamily="@font/mukta"
            app:layout_constraintEnd_toEndOf="@+id/textTask"
            app:layout_constraintStart_toStartOf="@+id/radioProgram"
            app:layout_constraintTop_toBottomOf="@+id/textProgram"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/reportTypeButton"
            app:layout_constraintTop_toBottomOf="@+id/reportTypeButton"
            tools:text="Room library article write"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_cancel"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/reportTypeButton"
            android:contentDescription="@string/button_cancel" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/card_border"
            android:padding="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/title_hint"
            android:inputType="textMultiLine"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textColor="@color/mms_black_2"
            android:textColorHint="@color/mms_black_5"
            app:fontFamily="@font/mukta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_border"
            android:padding="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/achievement_hint"
            android:textSize="16sp"
            android:textColor="@color/mms_black_2"
            android:textColorHint="@color/mms_black_5"
            app:fontFamily="@font/mukta"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <EditText
            android:id="@+id/editTextTextMultiLine3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_border"
            android:ems="10"
            android:padding="10dp"
            android:gravity="start|top"
            android:hint="@string/blocker_hint"
            android:textSize="16sp"
            android:textColor="@color/mms_black_2"
            android:textColorHint="@color/mms_black_5"
            app:fontFamily="@font/mukta"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

        <EditText
            android:id="@+id/editTextTextMultiLine4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_border"
            android:ems="10"
            android:padding="10dp"
            android:gravity="start|top"
            android:hint="@string/recommendation_hint"
            android:textSize="16sp"
            android:textColor="@color/mms_black_2"
            android:textColorHint="@color/mms_black_5"
            app:fontFamily="@font/mukta"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine3"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine3" />

        <Button
            android:id="@+id/reportSubmitButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="31dp"
            android:background="@drawable/button_background_filled"
            android:text="@string/submit_text"
            android:textAllCaps="false"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:fontFamily="@font/mukta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>